syntax = 'proto3';

package api;

import "google/protobuf/empty.proto";
import "k8s.io/api/core/v1/generated.proto";

message JobSubmitRequestItem {
    double Priority = 1;
    k8s.io.api.core.v1.PodSpec PodSpec = 2;
}

message JobSubmitRequest {
    string Queue = 1;
    string JobSetId = 2;
    repeated JobSubmitRequestItem JobRequestItems = 3;
}

message JobCancelRequest {
    string JobId = 1;
    string JobSetId = 2;
    string Queue = 3;
}

message JobSubmitResponseItem {
    string JobId = 1;
    string Error = 2;
}

message JobSubmitResponse {
    repeated JobSubmitResponseItem JobResponseItems = 1;
}

message Queue {
    string Name = 1;
    double PriorityFactor = 2;
    repeated string UserOwners = 3;
    repeated string GroupOwners = 4;
}

message CancellationResult {
    repeated string CancelledIds = 1;
}

service Submit {
    rpc SubmitJobs (JobSubmitRequest) returns (JobSubmitResponse);
    rpc CancelJobs (JobCancelRequest) returns (CancellationResult);
    rpc CreateQueue (Queue) returns (google.protobuf.Empty);
}
